--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=League+Script&display=swap");
 
 @import "tailwindcss";
 
-body {
-  font-family: "Poppins", serif;
+* {
+  font-family: "Outfit", serif;
 }
 a.active hr {
   display: block;
+}
+
+.league-script-regular {
+  font-family: "League Script", cursive;
+  font-weight: 500;
+  font-style: normal;
+}
+@media (max-width: 640px) {
+  a.active {
+    background-color: white;
+    color: black;
+  }
+  a {
+    color: rgba(255, 255, 255, 0.75);
+  }
 }
