--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,10 @@ a.active hr {
   font-weight: 500;
   font-style: normal;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
 @media (max-width: 640px) {
   a.active {
     background-color: white;
